fix for add series on edit promotion and screen jump on coupon state change

--- a/WebApp/wwwroot/css/materialize.css
+++ b/WebApp/wwwroot/css/materialize.css
@@ -5559,8 +5559,7 @@ textarea {
 
 .radio-button-group {
   position: absolute;
-  left: -9999em;
-  top: -9999em; }
+  left: -9999em; }
   .radio-button-group[disabled] + label {
     cursor: default;
     color: #bdbdbd; }
